--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,8 @@
   </style>
 </head>
 <body>
-    <h1>Say <strong>/hello</strong> to <br /><a href="xmpp:notifixlite@appspot.com">notifixlite@appspot.com</a>. <br /><em>It's awesome</em>, too.</h1>
+    <h1>Say <strong>/hello</strong> to <br /><a href="xmpp:notifixlite@appspot.com">notifixlite@appspot.com</a>*. <br /><em>It's awesome</em>, too.</h1>
+    <small>* Yes, you have to use a Jabber/XMPP client. Add notifixlite@appspot.com as a friend.</small>
     <p class="bottom">Powered by <a href="http://superfeedr.com">Superfeedr</a>&nbsp;<img src="http://www.gravatar.com/avatar/a2f7d4dd6df7dd59e4adab811c00a3a1?s=24">, on <a href="http://http://code.google.com/appengine/">Google App Engine</a> - Take that bad <a href="http://github.com/superfeedr/notifixlight">code</a> and make it better - <a href="http://www.youtube.com/watch?v=BD3ovfZXO5Q" style="text-decoration:none">&#9835;</a> &nbsp; </p>
 </body>
 
