--- a/templates/subscribe.html
+++ b/templates/subscribe.html
@@ -35,7 +35,7 @@
 </head>
 <body>
   {% for feed in feeds %}
-    <h2><a href='xmpp:notifixlite@appspot.com?message;body=/subscribe%20{{feed.href}}'>subscribe to {{feed.title}}</a></h2>
+    <h2><a href='xmpp:{{appname}}@appspot.com?message;body=/subscribe%20{{feed.href}}'>subscribe to {{feed.title}}</a></h2>
   {% endfor %}
   <p>We use <a href="http://www.subtome.com/">Subtome</a> for subscriptions. Next time you see a subscribe button, you'll be able to pick {{appname}} to subscribe.</a>
     <p class="bottom">Powered by <a href="http://superfeedr.com">Superfeedr</a> on <a href="http://http://code.google.com/appengine/">Google App Engine</a> - Take that bad <a href="http://github.com/superfeedr/notifixlight">code</a> and make it better.</p>
